--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+  <h3>
+    <%= message %>
+  </h3>
 
   <h1>Sign up or login</h1>
   <form method="POST" action="/login">
@@ -15,6 +18,7 @@
     <input type="text" placeholder="Your password" name="password" autocomplete="off">
     <button type="submit" class="nice">Submit</button>
   </form>
+
 
 </body>
 
