--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <link href="/css/styles.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
 </head>
 
