fixed the routes

--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -10,7 +10,7 @@
 
   <h1>Create a new post </h1>
 
-  <form method="POST" action="/new-post" id="newPost">
+  <form method="POST" action="/create-post" id="newPost">
     <input type="text" placeholder="Title" name="title" autocomplete="off">
     <textarea type="text" placeholder="Write something here" name="newPostBody" form="newPost" autocomplete="off"></textarea>
     <button type="submit" class="nice">Publish </button>
