--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,9 +11,9 @@
   <h1>Sign up </h1>
   <p>Enter your details below, all fields are required .</p>
   <form method="POST" action="/signup">
-    <input type="text" placeholder="Your name" name="name" autocomplete="off">
+    <input type="text" placeholder="Your username" name="username" autocomplete="off">
     <input type="text" placeholder="Your email" name="email" autocomplete="off">
-    <input type="text" placeholder="Your password" name="password" autocomplete="off">
+    <input type="password" placeholder="Your password" name="password" autocomplete="off">
     <h3 class="red">
       <%= error %>
     </h3>
