--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
   <form method="POST" action="/login">
 
     <input type="text" placeholder="Your email" name="email" autocomplete="off">
-    <input type="text" placeholder="Your password" name="password" autocomplete="off">
+    <input type="password" placeholder="Your password" name="password" autocomplete="off">
     <button type="submit" class="nice">Login</button>
   </form>
   <div class="actions">
