--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -12,41 +12,48 @@
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog">See all posts</a></li>
     </ul>
   </nav>
   <h1>Welcome
     <%= userInfo.username %> to your Blog</h1>
   <p>you have no posts yet </p>
+  <a href='/create-post'>Create your first post</a>
 
   <% } else if (userInfo.username === postAuthor ) { %>
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog">See all posts</a></li>
     </ul>
   </nav>
   <h1>Welcome
     <%= postAuthor %> to your Blog</h1>
   <h2>Here are all your posts</h2>
   <% posts.forEach(post =>{ %>
-  <a href="<%= post.id %>">
+  <a href="/blog/<%= postAuthor %>/<%= post.id %>">
     <div>
       <%= post.title%>
-      <%= post.body %>
       <%= post.createdAt %>
     </div>
   </a>
   <% }) %>
+  <a href='/create-post'>Create another post</a>
   <% } else { %>
+  <nav>
+    <ul>
+      <li><a href="/blog">See all posts</a></li>
+    </ul>
+  </nav>
   <h1>Welcome
     to
     <%= postAuthor %>'s Blog</h1>
 
   <h2>Here are the posts</h2>
   <% posts.forEach(post =>{ %>
-  <a href="<%= post.id %>">
+  <a href="/blog/<%= postAuthor %>/<%= post.id %>">
     <div>
       <%= post.title%>
-      <%= post.body %>
       <%= post.createdAt %>
     </div>
   </a>
