--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,13 @@
   box-sizing: border-box;
 }
 
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 input,
 textarea {
   padding: 10px;
@@ -22,7 +29,7 @@ textarea {
 
 body {
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 50px;
   max-width: 50vw;
   font-family: 'PT Sans', sans-serif;
   font-size: 15px;
@@ -72,4 +79,21 @@ button {
 
 .red {
   color: red;
+}
+
+nav ul {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+nav ul li {
+  padding-right: 15px;
+}
+
+.postWrapper {
+  margin: 15px 0;
+}
+
+.postBody {
+  margin: 10px 0;
 }
