--- a/views/all_posts.ejs
+++ b/views/all_posts.ejs
@@ -12,22 +12,25 @@
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog">See all posts</a></li>
     </ul>
   </nav>
   <% } %>
-  <h2>Here are all the blog posts</h2>
+  <h1>Here are all the blog posts</h1>
   <% postData.forEach(p => { %>
-  <a href="/blog/<%=p.user.username%>/<%=p.id%>">
+  <div class="postWrapper">
+    <a href="/blog/<%=p.user.username%>/<%=p.id%>">
+      <h3>
+        <%= p.title%>
+      </h3>
+      <p>Written by
+        <%= p.user.username %>
+        <span>On
+          <%= p.createdAt %></span>
+      </p>
+    </a>
+  </div>
 
-    <div>
-      <%= p.title%>
-    </div>
-    <div>Written by
-      <%= p.user.username %>
-      <span>On
-        <%= p.createdAt %></span>
-    </div>
-  </a>
   <% }) %>
 
 
