--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -14,6 +14,7 @@
     <ul>
       <li><a href="/logout">logout</a></li>
       <li><a href="/blog">See all posts</a></li>
+      <li><a href='/create-post'>Create a new post</a></li>
     </ul>
   </nav>
   <% } else { %>
@@ -29,24 +30,27 @@
   <% } %>
   <%  if (!posts.length ){ %>
   <%  if (userInfo.username) { %>
-  <p>You have no posts yet </p>
-  <a href='/create-post'>Create your first post</a>
+  <p>You have no posts yet :( </p>
+  <div><a href='/create-post'>Create your first post</a></div>
   <%  } else { %>
-  <p>No posts yet</p>
+  <p>No posts yet :(</p>
   <% } %>
   <%  } else { %>
   <h2>Here are the posts</h2>
   <% posts.forEach(post =>{ %>
-  <a href="/blog/<%= postAuthor %>/<%= post.id %>">
-    <div>
-      <%= post.title%>
-      <%= post.createdAt %>
-    </div>
-  </a>
+  <div class="postWrapper">
+    <a href="/blog/<%= postAuthor %>/<%= post.id %>">
+      <h3>
+        <%= post.title%>
+      </h3>
+      <p>
+        <%= post.createdAt %>
+      </p>
+    </a>
+  </div>
+
   <% }) %>
-  <%  if (userInfo.username) { %>
-  <a href='/create-post'>Create a new post</a>
-  <% } %>
+
   <% }  %>
 </body>
 
