--- a/views/blog_post.ejs
+++ b/views/blog_post.ejs
@@ -12,6 +12,7 @@
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog/<%=user.username%>">Your Blog</a></li>
       <li><a href="/blog">See all posts</a></li>
     </ul>
   </nav>
