--- a/views/all_posts.ejs
+++ b/views/all_posts.ejs
@@ -12,7 +12,9 @@
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog/<%=user.username%>">Your Blog</a></li>
       <li><a href="/blog">See all posts</a></li>
+      <li><a href='/create-post'>Create a post</a></li>
     </ul>
   </nav>
   <% } %>
