--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -11,7 +11,10 @@
   <nav>
     <ul>
       <li><a href="/logout">logout</a></li>
+      <li><a href="/blog/<%=username%>">Your Blog</a></li>
       <li><a href="/blog">See all posts</a></li>
+
+
     </ul>
   </nav>
   <% } else { %>
