added data validation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,8 +14,8 @@
   <p>Enter your details below</p>
   <form method="POST" action="/login">
 
-    <input type="text" placeholder="Your email" name="email" autocomplete="off">
-    <input type="password" placeholder="Your password" name="password" autocomplete="off">
+    <input type="email" placeholder="Your email" name="email" autocomplete="off" required>
+    <input type="password" placeholder="Your password" name="password" autocomplete="off" required>
     <button type="submit" class="nice">Login</button>
   </form>
   <div class="actions">
